--- a/aegis-protocol/program/Cargo.toml
+++ b/aegis-protocol/program/Cargo.toml
@@ -13,23 +13,19 @@ no-entrypoint = []
 no-idl = []
 no-log-ix-name = []
 cpi = ["no-entrypoint"]
-idl-build = ["anchor-lang/idl-build"]
+idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
 default = []
 
 [profile.release]
-overflow-checks = true
-lto = "fat"
+overflow-checks = false
+lto = false
 codegen-units = 1
-[profile.release.build-override]
 opt-level = 3
-incremental = false
-codegen-units = 1
 
 [dependencies]
 anchor-lang = "0.32.0"
 anchor-spl = "0.32.0"
-pyth-sdk-solana = "0.10.0"
 getrandom = { version = "0.2", features = ["custom"] }
 
 [dev-dependencies]
-anchor-client = "0.30.1"
+anchor-client = "0.32.0"
