--- a/aegis-protocol/sdk/package.json
+++ b/aegis-protocol/sdk/package.json
@@ -1,75 +1,33 @@
 {
   "name": "@aegis/sdk",
   "version": "0.1.0",
-  "description": "TypeScript SDK for Aegis Protocol",
+  "description": "Aegis Protocol SDK - TypeScript SDK for interacting with Aegis Protocol on Solana",
   "main": "dist/index.js",
-  "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
-  "exports": {
-    ".": {
-      "import": "./dist/index.mjs",
-      "require": "./dist/index.js",
-      "types": "./dist/index.d.ts"
-    }
-  },
-  "files": [
-    "dist",
-    "src"
-  ],
   "scripts": {
-    "build": "tsup src/index.ts --format cjs,esm --dts",
-    "dev": "tsup src/index.ts --format cjs,esm --dts --watch",
+    "build": "tsc",
+    "dev": "tsc --watch",
     "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
-    "lint": "eslint src --ext .ts,.tsx",
-    "lint:fix": "eslint src --ext .ts,.tsx --fix",
-    "typecheck": "tsc --noEmit",
-    "clean": "rm -rf dist",
-    "prepublishOnly": "pnpm build"
+    "lint": "eslint src/**/*.ts",
+    "typecheck": "tsc --noEmit"
   },
+  "keywords": ["solana", "blockchain", "defi", "amm", "typescript"],
+  "author": "Aegis Protocol Team",
+  "license": "MIT",
   "dependencies": {
     "@solana/web3.js": "^1.87.0",
-    "@coral-xyz/anchor": "^0.30.0",
     "@solana/spl-token": "^0.3.8",
-    "bn.js": "^5.2.1",
-    "eventemitter3": "^5.0.0"
+    "bn.js": "^5.2.1"
   },
   "devDependencies": {
-    "@types/bn.js": "^5.1.0",
-    "@types/jest": "^29.0.0",
-    "@types/node": "^20.0.0",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "eslint": "^8.0.0",
-    "jest": "^29.0.0",
-    "ts-jest": "^29.0.0",
-    "tsup": "^7.0.0",
-    "tsx": "^4.0.0",
-    "typescript": "^5.0.0"
+    "@types/bn.js": "^5.1.1",
+    "@types/jest": "^29.5.5",
+    "@types/node": "^20.8.0",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.1",
+    "typescript": "^5.2.0"
   },
   "peerDependencies": {
     "@solana/web3.js": "^1.87.0"
-  },
-  "engines": {
-    "node": ">=18.0.0"
-  },
-  "keywords": [
-    "solana",
-    "typescript",
-    "sdk",
-    "defi",
-    "vault",
-    "ai",
-    "safety"
-  ],
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/your-username/aegis-protocol.git",
-    "directory": "sdk"
-  },
-  "publishConfig": {
-    "access": "public"
   }
 }
