--- a/aegis-frontend/package.json
+++ b/aegis-frontend/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "prepare-sdk": "cd ../aegis-protocol/sdk && npm install && npm run build",
+    "prebuild": "npm run prepare-sdk",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
