--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "buildCommand": "npm run build",
   "devCommand": "npm run dev",
-  "installCommand": "npm install",
+  "installCommand": "cd ../aegis-protocol/sdk && npm install && npm run build && cd ../../aegis-frontend && npm install",
   "outputDirectory": ".next"
 }
