--- a/aegis-protocol/sdk/package.json
+++ b/aegis-protocol/sdk/package.json
@@ -17,10 +17,10 @@
   "dependencies": {
     "@solana/web3.js": "^1.87.0",
     "@solana/spl-token": "^0.3.8",
-    "bn.js": "^5.2.1"
+    "bn.js": "^5.2.1",
+    "@types/bn.js": "^5.1.1"
   },
   "devDependencies": {
-    "@types/bn.js": "^5.1.1",
     "@types/jest": "^29.5.5",
     "@types/node": "^20.8.0",
     "jest": "^29.7.0",
