--- a/aegis-protocol/program/Anchor.toml
+++ b/aegis-protocol/program/Anchor.toml
@@ -1,24 +1,24 @@
-[features]
-seeds = true
-skip-lint = false
-
 [toolchain]
 anchor_version = "0.31.0"
 
-[programs.localnet]
-aegis_protocol = "AerttabNDRDQkaHZBKka1JFGytct6Bx5hV5Jonrvwryu"
+[features]
+resolution = true
+skip-lint = false
 
 [programs.devnet]
-aegis_protocol = "AerttabNDRDQkaHZBKka1JFGytct6Bx5hV5Jonrvwryu"
+aegis_protocol = "FqGarB7xanZe2PWXxsFdxMgkYF1kR4q6E1VSSWsTgBc9"
+
+[programs.localnet]
+aegis_protocol = "FqGarB7xanZe2PWXxsFdxMgkYF1kR4q6E1VSSWsTgBc9"
 
 [programs.mainnet]
-aegis_protocol = "Aegis111111111111111111111111111111111111111"
+aegis_protocol = "FqGarB7xanZe2PWXxsFdxMgkYF1kR4q6E1VSSWsTgBc9"
 
 [registry]
 url = "https://api.apr.dev"
 
 [provider]
-cluster = "Devnet"
+cluster = "devnet"
 wallet = "~/.config/solana/id.json"
 
 [scripts]
