--- a/aegis-frontend/package.json
+++ b/aegis-frontend/package.json
@@ -20,6 +20,7 @@
     "@solana/wallet-adapter-react-ui": "^0.9.39",
     "@solana/wallet-adapter-wallets": "^0.19.37",
     "@solana/web3.js": "^1.87.0",
+    "@types/bn.js": "^5.2.0",
     "next": "14.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0"
