--- a/aegis-protocol/sdk/package.json
+++ b/aegis-protocol/sdk/package.json
@@ -13,28 +13,40 @@
     "test:comprehensive": "ts-node scripts/comprehensive-test.ts",
     "test:fund-wallets": "ts-node scripts/fund-wallets.ts",
     "test:create-pools": "ts-node scripts/test-create-pools.ts",
-    "test:sdk-pool": "ts-node scripts/test-sdk-create-pool.ts"
+    "test:sdk-pool": "ts-node scripts/test-sdk-create-pool.ts",
+    "seed:devnet": "ts-node scripts/seed_devnet_liquidity.ts",
+    "smoke:devnet": "ts-node scripts/smoke_test_swaps.ts",
+    "create:pools": "ts-node scripts/create-pools-direct.ts",
+    "mint:tokens": "ts-node scripts/mint-tokens-to-treasury.ts"
   },
-  "keywords": ["solana", "blockchain", "defi", "amm", "typescript"],
+  "keywords": [
+    "solana",
+    "blockchain",
+    "defi",
+    "amm",
+    "typescript"
+  ],
   "author": "Aegis Protocol Team",
   "license": "MIT",
   "dependencies": {
-    "@solana/web3.js": "^1.87.0",
-    "@solana/spl-token": "^0.3.8",
     "@coral-xyz/anchor": "^0.32.0",
+    "@solana/spl-token": "^0.3.8",
+    "@solana/web3.js": "^1.87.0",
+    "@types/bn.js": "^5.1.1",
     "bn.js": "^5.2.1",
-    "@types/bn.js": "^5.1.1"
+    "dotenv": "^16.3.1"
   },
   "devDependencies": {
+    "@types/dotenv": "^6.1.1",
     "@types/jest": "^29.5.5",
     "@types/node": "^20.8.0",
+    "@typescript-eslint/eslint-plugin": "^6.7.0",
+    "@typescript-eslint/parser": "^6.7.0",
+    "eslint": "^8.50.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
-    "typescript": "^5.2.0",
-    "eslint": "^8.50.0",
-    "@typescript-eslint/eslint-plugin": "^6.7.0",
-    "@typescript-eslint/parser": "^6.7.0"
+    "typescript": "^5.2.0"
   },
   "peerDependencies": {
     "@solana/web3.js": "^1.87.0"
