fix: corrigir configuração do Vercel para usar pnpm e remover rootDirectory inválido

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,6 @@
 {
-  "buildCommand": "pnpm run build",
-  "devCommand": "pnpm run dev",
-  "installCommand": "cd ../aegis-protocol/sdk && pnpm install && pnpm run build && cd ../../aegis-frontend && pnpm install",
-  "outputDirectory": ".next",
-  "rootDirectory": "aegis-frontend"
+  "buildCommand": "cd aegis-frontend && pnpm run build",
+  "devCommand": "cd aegis-frontend && pnpm run dev",
+  "installCommand": "cd aegis-protocol/sdk && pnpm install && pnpm run build && cd ../../aegis-frontend && pnpm install",
+  "outputDirectory": "aegis-frontend/.next"
 }
