--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "buildCommand": "cd aegis-frontend && pnpm run build",
   "devCommand": "cd aegis-frontend && pnpm run dev",
-  "installCommand": "bash install.sh",
+  "installCommand": "cd aegis-frontend && pnpm install",
   "outputDirectory": "aegis-frontend/.next"
 }
