--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
-  "buildCommand": "cd aegis-frontend && pnpm run build",
-  "devCommand": "cd aegis-frontend && pnpm run dev",
-  "installCommand": "cd aegis-frontend && pnpm install",
+  "buildCommand": "pnpm run build",
+  "devCommand": "pnpm run dev",
+  "installCommand": "pnpm run install:all",
   "outputDirectory": "aegis-frontend/.next"
 }
