--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "buildCommand": "pnpm run build",
   "devCommand": "pnpm run dev",
-  "installCommand": "pnpm run install:all",
-  "outputDirectory": "aegis-frontend/.next"
+  "installCommand": "pnpm install",
+  "outputDirectory": ".next"
 }
