--- a/aegis-frontend/package.json
+++ b/aegis-frontend/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "prepare-sdk": "cd ../aegis-protocol/sdk && pnpm install && pnpm run build",
-    "preinstall": "pnpm run prepare-sdk",
-    "prebuild": "pnpm run prepare-sdk",
+    "prepare-sdk": "cd ../aegis-protocol && yarn install --frozen-lockfile || yarn install && yarn workspace @aegis/sdk run build",
+    "preinstall": "yarn run prepare-sdk",
+    "prebuild": "yarn run prepare-sdk",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
